# VTFLib

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
VTFLib/: FileReader.cpp  VTFFile.cpp  VTFFile.h  VTFFormat.h  stdafx.h
lib/: VTFLib.h
